Fix drop menu z-index

--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ nav a:focus {
     flex-direction: column;
     background-color: black;
     width: 100%;
+    z-index: 1;
 }
 
 .drop-content > a {
